--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,10 @@
     },
     "require-dev": {
         "peridot-php/peridot-jumpstart": "~1.0"
+    },
+    "autoload": {
+      "psr-4": {
+        "Peridot\\Leo\\Http\\":"src/"
+      }
     }
 }
