--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
     "require": {
         "peridot-php/leo": "~1.0",
-        "symfony/http-foundation": "~2.0"
+        "symfony/http-foundation": "~2.0|~3.0|~4.0"
     },
     "require-dev": {
         "peridot-php/peridot-jumpstart": "~1.0"
